home page update with softpedia[1;5D[1;5D[1;5D[1;5D[1;5D[D[D[D[Dgithub [4[C[3~[3~[Cand softpedia logos

--- a/index.html
+++ b/index.html
@@ -7,21 +7,30 @@
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
  </head>
 <body class="mediawiki ltr sitedir-ltr ns-0 ns-subject skin-vector action-submit vector-animateLayout" spellcheck="false">
+<a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
+  <div style='float:right;margin-right:125px;'>
+    <table>
+      <tr>
+        <td>
+          <div style='float:right;margin-top:15px;'>
+              <a href="https://play.google.com/store/apps/details?id=org.xowa" class="image">
+                <img width='140px' src="https://gnosygnu.github.io/xowa/en-play-badge.png" />
+              </a>
+          </div>
+        </td>
+      </tr>
+    </table>
+  </div>
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>Main Page</span></h1>
+  <h1 id="firstHeading" class="firstHeading">
+    <span>Main Page</span>
+  </h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application
-    <div style='float:right'>
-        <a href="https://play.google.com/store/apps/details?id=org.xowa" class="image">
-          <img width='140px' src="https://gnosygnu.github.io/xowa/en-play-badge.png" />
-        </a>    
     </div>
-    </div>
-    <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
-
 <!-- page_bgn -->
 <table width='100%'>
 <tr>
@@ -101,7 +110,7 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
-  <b>2016-11-13</b>2016-10 French, Polish, Swedish, Spanish wikis released. Also, 2016-11 English Wikipedia <br/>
+  <b>2016-11-13</b> 2016-10 French, Polish, Swedish, Spanish wikis released. Also, 2016-11 English Wikipedia <br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
     </li>
@@ -115,7 +124,7 @@
     </li>
   </ul>
   
-  <b>2016-10-24</b>2016-10 English and German Wikis updated (Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, Wikinews)<br/>
+  <b>2016-10-24</b> 2016-10 English and German Wikis updated (Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, Wikinews)<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
     </li>
@@ -123,7 +132,7 @@
     </li>
   </ul>
 
-  <b>2016-10-16</b>2016-10 English and German Wikipedia updated<br/>
+  <b>2016-10-16</b> 2016-10 English and German Wikipedia updated<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
     </li>
@@ -131,7 +140,7 @@
     </li>
   </ul>
 
-  <b>2016-09-25</b>2016-09 French, English and German Wikipedia updated<br/>
+  <b>2016-09-25</b> 2016-09 French, English and German Wikipedia updated<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_frwiki_latest" class="external text" rel="nofollow">French Wikipedia</a>
     </li>
@@ -144,26 +153,6 @@
   <b>2016-09-05</b> Czech Wikis updated<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_cswiki_latest" class="external text" rel="nofollow">Czech wikis</a>
-    </li>
-  </ul>
-
-  <b>2016-08-29</b> English Wikipedia and German Wikipedia updated<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German Wikipedia</a>
-    </li>
-  </ul>
-
-  <b>2016-08-08</b> Polish Wikis updated<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_plwiki_latest" class="external text" rel="nofollow">Polish wikis</a>
-    </li>
-  </ul>
-
-  <b>2016-08-01</b> Arabic Wikis updated<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_arwiki_latest" class="external text" rel="nofollow">Arabic wikis</a>
     </li>
   </ul>
 
@@ -268,6 +257,17 @@
       </ul>
     </div>
   </div>
+
+  <div class="portal" id='xowa-portal-images'>
+    <br/>
+    <div style='margin-left:6px;'>
+      <a href="http://mac.softpedia.com/get/Utilities/XOWA.shtml#status">
+        <img width='80' src="http://s1.softpedia-static.com/_img/softpedia_logo.png?6">
+        <img width='80' src='http://s1.softpedia-static.com/_img/sp100free.png?1'>
+      </a>
+    </div>
+  </div>
+
   
   </div>
   </div>
